--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+== Tiny app for submitting and showing service status
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+To set a status, send a POST request to /api/1/reports with json containing message and status. It is possible to create a report only with a status or only with a message. If status key is being passed, value can only be 'up', 'down' or nil.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+To view the latest 10 messages and a current status, open a root route of the app in a browser.
